refactor: switch project from query param to X-Project-ID header
